# glvis

./: .clang-format  CMakeLists.txt  main.cpp  utils.cpp  utils.h
.clinerules/: main.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/: abstract_texture.h  angle.h  app.h  camera.h  circle.h  color.h  glvis_common.h  rectangle.h  render_texture.h  shader.h  shape.h  texture.h  utils.h  vector.h  vertex.h  vertex_buffer.h
shaders/: fbo.vert  screen.frag  screen.vert  simple.frag  simple.vert
src/: abstract_texture.cpp  angle.cpp  app.cpp  camera.cpp  circle.cpp  color.cpp  common.cpp  glvis_common.cpp  rectangle.cpp  render_texture.cpp  shader.cpp  shape.cpp  texture.cpp  utils.cpp  vector.cpp  vertex_buffer.cpp
tests/: CMakeLists.txt  main.cpp
